syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./grpc/user";

// User definition
message User {
  string id = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string password = 5;
  google.protobuf.Timestamp created_at = 6;
  string created_by = 7;
  google.protobuf.Timestamp updated_at = 8;
  string updated_by = 9;
}

// UserList definition
message UserList {
  repeated User users = 1;
}

// UserService definition
service UserService {
  rpc GetUser(User) returns (User);
  rpc CreateUser(User) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(User) returns (google.protobuf.Empty);
  rpc GetUsers(google.protobuf.Empty) returns (UserList);

  rpc VerifyUserEmail(User) returns (User);
}
